--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "tailwindcss": "^2.2.19"
   },
   "name": "men-stack-template",
   "description": "",
@@ -15,7 +16,8 @@
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1" 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "tailwind build -i public/tailwind.css -o public/out.css"
   },
   "repository": {
     "type": "git",
