--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "firebase": "^9.6.1",
     "tailwindcss": "^2.2.19"
   },
   "name": "men-stack-template",
